hydra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
        - name: hydra
          image: oryd/hydra:v26.2.0
          imagePullPolicy: IfNotPresent
          command:
            - hydra
            - serve
            - -c
            - /etc/config/hydra/hydra.yml
            - all
            - --dev
          ports:
            - name: public
              containerPort: 4444
            - name: admin
              containerPort: 4445
          volumeMounts:
            - name: config
              mountPath: /etc/config/hydra
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 0
              memory: 0
      volumes:
        - name: config
          configMap:
            name: hydra
