hydra/base/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-admin
  labels:
    app: hydra
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4445
      targetPort: admin
  selector:
    app: hydra
