hydra/base/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-public
  labels:
    app: hydra
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4444
      targetPort: public
  selector:
    app: hydra
