hydra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra
  labels:
    app: hydra
spec:
  type: ClusterIP
  ports:
    - name: public
      protocol: TCP
      port: 4444
      targetPort: public
    - name: admin
      protocol: TCP
      port: 4445
      targetPort: admin
  selector:
    app: hydra
