hydra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydra
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.outi.ir
      secretName: hydra-tls
  rules:
    - host: auth.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydra
                port:
                  name: public
